--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,12 @@
 
   <dependencies>
     <dependency>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter-engine</artifactId>
+      <version>5.7.0</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
       <groupId>com.github.cliftonlabs</groupId>
       <artifactId>json-simple</artifactId>
       <version>3.1.0</version>
