--- a/pom.xml
+++ b/pom.xml
@@ -7,9 +7,9 @@
   </properties>
   <modelVersion>4.0.0</modelVersion>
   <groupId>fr.formiko</groupId>
-  <artifactId>Formiko</artifactId>
+  <artifactId>FormikoUsual</artifactId>
   <packaging>jar</packaging>
-  <version>0.1</version>
+  <version>0.1.3</version>
   <name>Usual</name>
   <url>https://formiko.fr</url>
 
