--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,7 +26,10 @@ jobs:
       id: version
 
     - name: update version.md
-      run: echo ${{ steps.version.outputs.version }} > version.md
+      run: |
+        wget https://github.com/HydrolienF/Version-Tool/archive/refs/tags/0.5.7.zip
+        unzip Version-Tool-0.5.7.zip
+        echo ${{ steps.version.outputs.version }} > version.md
 
     - name: to .jar
       run: |
