--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,8 @@
         <version>3.8.1</version>
         <configuration>
           <release>16</release>
+          <source>16</source>
+          <target>16</target>
           <compilerArgument>-Xlint:all</compilerArgument>
         </configuration>
       </plugin>
