--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
   <groupId>fr.formiko</groupId>
   <artifactId>FormikoUsual</artifactId>
   <packaging>jar</packaging>
-  <version>0.1.23</version>
+  <version>0.1.21</version>
   <name>Usual</name>
   <url>https://formiko.fr</url>
 
@@ -69,8 +69,7 @@
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.8.1</version>
         <configuration>
-          <source>16</source>
-          <target>16</target>
+          <release>16</release>
           <compilerArgument>-Xlint:all</compilerArgument>
         </configuration>
       </plugin>
