Add javadoc workflow

--- a/pom.xml
+++ b/pom.xml
@@ -142,7 +142,7 @@
           </archive>
         </configuration>
       </plugin>
-      <!-- <plugin>
+      <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-javadoc-plugin</artifactId>
         <version>3.3.1</version>
@@ -169,7 +169,7 @@
           <additionalOptions>-Xdoclint:none</additionalOptions>
           <additionalJOption>-Xdoclint:none</additionalJOption>
         </configuration>
-      </plugin> -->
+      </plugin>
     </plugins>
   </build>
 </project>
