--- a/.github/workflows/javadoc.yml
+++ b/.github/workflows/javadoc.yml
@@ -28,5 +28,6 @@ jobs:
           git config --local user.name "GitHub Action"
           git add docs/
           git commit -m "Auto javadoc update"
+          git pull
           git push
         fi
