--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -41,6 +41,7 @@ jobs:
         git add pom.xml
         git add version.md
         git commit -m "Auto version update"
+        git pull
         git push
 
     - name: to .jar
