--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,21 +14,20 @@ jobs:
     outputs:
       output1: ${{ steps.create_release.outputs.upload_url }}
     steps:
-    - name: checkout
-      uses: actions/checkout@v2
+    - uses: actions/checkout@v3
     - name: Set up JDK
-      uses: actions/setup-java@v1
+      uses: actions/setup-java@v3
       with:
         java-version: 16
 
     - name: download Version-Tool
       run: |
-        wget https://github.com/HydrolienF/Version-Tool/archive/refs/tags/0.5.7.zip
-        unzip 0.5.7.zip
-        mv Version-Tool-0.5.7/*.sh .
+        wget https://github.com/HydrolienF/Version-Tool/archive/refs/tags/0.6.0.zip
+        unzip 0.6.0.zip
+        mv Version-Tool-0.6.0/*.sh .
 
     - name: Version-Tool
-      uses: HydrolienF/Version-Tool@0.5.7
+      uses: HydrolienF/Version-Tool@0.6.0
       id: version
     - name: update version.md
       run: echo ${{ steps.version.outputs.version }} > version.md
