--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -35,6 +35,7 @@ jobs:
         git add pom.xml
         git add version.md
         git commit -m "Auto version update"
+        git fetch
         git pull
         git push
 
