sleep 5s so that github can finish it's merge to master before jitpack start.

--- a/jitpack.yml
+++ b/jitpack.yml
@@ -1,4 +1,5 @@
 install:
+  - sleep 5
   - VERSION=$(cat version.md)
   - wget https://github.com/HydrolienF/usual/releases/download/$VERSION/FormikoUsual$VERSION.jar
   - FILE="-Dfile=FormikoUsual$VERSION.jar"
