--- a/.github/workflows/javadoc.yml
+++ b/.github/workflows/javadoc.yml
@@ -28,6 +28,7 @@ jobs:
         if [[ `git status --untracked-files=no --porcelain docs/` != "\n" ]]; then
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
+          git restore pom.xml
           git config pull.rebase true
           git add docs/
           git commit -m "Auto javadoc update"
