--- a/pom.xml
+++ b/pom.xml
@@ -86,19 +86,19 @@
         <artifactId>jacoco-maven-plugin</artifactId>
         <version>0.8.8</version>
         <executions>
-            <execution>
-                <goals>
-                    <goal>prepare-agent</goal>
-                </goals>
-            </execution>
-            <!-- attached to Maven test phase -->
-            <execution>
-                <id>report</id>
-                <phase>test</phase>
-                <goals>
-                    <goal>report</goal>
-                </goals>
-            </execution>
+          <execution>
+            <goals>
+              <goal>prepare-agent</goal>
+            </goals>
+          </execution>
+          <!-- attached to Maven test phase -->
+          <execution>
+            <id>report</id>
+            <phase>test</phase>
+            <goals>
+              <goal>report</goal>
+            </goals>
+          </execution>
         </executions>
       </plugin>
       <plugin>
@@ -108,9 +108,9 @@
         <configuration>
           <archive>
             <manifest>
-            <addClasspath>true</addClasspath>
-            <!-- <mainClass>fr.formiko.formikolauncher.Main</mainClass> -->
-            <!-- <classpathPrefix>dependency-jars/</classpathPrefix> -->
+              <addClasspath>true</addClasspath>
+              <mainClass>fr.formiko.usual.Usual</mainClass>
+              <!-- <classpathPrefix>dependency-jars/</classpathPrefix> -->
             </manifest>
           </archive>
         </configuration>
@@ -133,11 +133,11 @@
             <index>true</index>
             <manifest>
               <addClasspath>true</addClasspath>
-              <!-- <mainClass>fr.formiko.formikolauncher.Main</mainClass> -->
+              <mainClass>fr.formiko.usual.Usual</mainClass>
             </manifest>
             <!-- <manifestEntries> -->
-              <!-- <mode>development</mode> -->
-              <!-- <key>value</key> -->
+            <!-- <mode>development</mode> -->
+            <!-- <key>value</key> -->
             <!-- </manifestEntries> -->
           </archive>
         </configuration>
