--- a/action.yml
+++ b/action.yml
@@ -31,7 +31,7 @@ runs:
       java-version: ${{ env.JAVA_VERSION }}
 
   - name: Execute with args
-    shell: bash
+    shell: pwsh
     run: |
       cd ${{ github.action_path }}
       mvn -ntp package -Dmaven.test.skip
